--- a/melamandi/package.json
+++ b/melamandi/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "classnames": "^2.5.1",
     "framer-motion": "^10.18.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "next": "^14.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
