--- a/package.json
+++ b/package.json
@@ -11,18 +11,22 @@
   "dependencies": {
     "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
+    "iconv-lite": "^0.6.3",
     "lucide-react": "^0.453.0",
     "next": "15.5.3",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.15",
+    "pdfkit": "^0.15.0",
     "postcss": "^8.4.47",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "tailwindcss": "^3.4.14",
-    "nodemailer": "^6.9.15",
     "stripe": "^16.6.0",
-    "pdfkit": "^0.15.0"
+    "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
+    "@types/node": "^20.12.12",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.0",
     "typescript": "^5.6.3"
   }
 }
