--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.0",
     "typescript": "^5.6.3"
