build(ts): enable esModuleInterop + allowSyntheticDefaultImports (keep skipLibCheck)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
     },
     "types": [
       "node"
-    ]
+    ],
+    "allowSyntheticDefaultImports": true
   },
   "include": [
     "next-env.d.ts",
